// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Alert 1`] = `
<div
  class="wp-components-animated css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-17vh6wg"
    data-g2-c16t="true"
    data-g2-component="Alert"
    id="Alert"
  >
    <div
      class="wp-components-flex css-1806uq"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-zkdzda"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="css-j1yu9m"
          data-g2-component="AlertContent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render Alert with css prop 1`] = `
<div
  class="wp-components-alert css-17vh6wg"
  data-g2-c16t="true"
  data-g2-component="Alert"
  id="Alert"
>
  <div
    class="wp-components-flex css-1806uq"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <div
      class="wp-components-flex-item wp-components-flex-block css-zkdzda"
      data-g2-c16t="true"
      data-g2-component="FlexBlock"
    >
      <div
        class="css-j1yu9m"
        data-g2-component="AlertContent"
      />
    </div>
  </div>
</div>
`;

exports[`props should render Alert with css prop 2`] = `
<div
  class="wp-components-alert css-pozs7z"
  data-g2-c16t="true"
  data-g2-component="Alert"
  id="Alert"
>
  <div
    class="wp-components-flex css-1806uq"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <div
      class="wp-components-flex-item wp-components-flex-block css-zkdzda"
      data-g2-c16t="true"
      data-g2-component="FlexBlock"
    >
      <div
        class="css-j1yu9m"
        data-g2-component="AlertContent"
      />
    </div>
  </div>
</div>
`;

exports[`props should render Animated 1`] = `
<div
  class="wp-components-animated css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Animated"
  id="Animated"
/>
`;

exports[`props should render Animated with css prop 1`] = `
<div
  class="wp-components-animated css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Animated"
  id="Animated"
/>
`;

exports[`props should render Animated with css prop 2`] = `
<div
  class="wp-components-animated css-rnwhtm"
  data-g2-c16t="true"
  data-g2-component="Animated"
  id="Animated"
/>
`;

exports[`props should render ArrowIndicator 1`] = `
<div
  class="wp-components-arrow-indicator css-tfxa88"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
  id="ArrowIndicator"
>
  <div
    class="css-j1yu9m"
  >
    <div
      class="wp-components-icon css-feyyos"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render ArrowIndicator with css prop 1`] = `
<div
  class="wp-components-arrow-indicator css-tfxa88"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
  id="ArrowIndicator"
>
  <div
    class="css-j1yu9m"
  >
    <div
      class="wp-components-icon css-feyyos"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render ArrowIndicator with css prop 2`] = `
<div
  class="wp-components-arrow-indicator css-14tugfq"
  data-g2-c16t="true"
  data-g2-component="ArrowIndicator"
  id="ArrowIndicator"
>
  <div
    class="css-j1yu9m"
  >
    <div
      class="wp-components-icon css-feyyos"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="currentColor"
        height="5"
        size="5"
        viewBox="0 0 24 24"
        width="5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12l-18 12v-24z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render AspectRatio 1`] = `
<div
  class="wp-components-aspect-ratio css-fvkpkj"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
  id="AspectRatio"
>
  <div
    aria-hidden="true"
    class="css-v1plal"
  />
</div>
`;

exports[`props should render AspectRatio with css prop 1`] = `
<div
  class="wp-components-aspect-ratio css-fvkpkj"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
  id="AspectRatio"
>
  <div
    aria-hidden="true"
    class="css-v1plal"
  />
</div>
`;

exports[`props should render AspectRatio with css prop 2`] = `
<div
  class="wp-components-aspect-ratio css-19enkyf"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
  id="AspectRatio"
>
  <div
    aria-hidden="true"
    class="css-v1plal"
  />
</div>
`;

exports[`props should render Avatar 1`] = `
<div
  class="wp-components-avatar css-6y3e8p"
  data-g2-c16t="true"
  data-g2-component="Avatar"
  id="Avatar"
/>
`;

exports[`props should render Avatar with css prop 1`] = `
<div
  class="wp-components-avatar css-6y3e8p"
  data-g2-c16t="true"
  data-g2-component="Avatar"
  id="Avatar"
/>
`;

exports[`props should render Avatar with css prop 2`] = `
<div
  class="wp-components-avatar css-qywdmr"
  data-g2-c16t="true"
  data-g2-component="Avatar"
  id="Avatar"
/>
`;

exports[`props should render Background 1`] = `
<div
  class="wp-components-surface wp-components-background css-nide5z"
  data-g2-c16t="true"
  data-g2-component="Background"
  id="Background"
/>
`;

exports[`props should render Background with css prop 1`] = `
<div
  class="wp-components-surface wp-components-background css-nide5z"
  data-g2-c16t="true"
  data-g2-component="Background"
  id="Background"
/>
`;

exports[`props should render Background with css prop 2`] = `
<div
  class="wp-components-surface wp-components-background css-5drq8o"
  data-g2-c16t="true"
  data-g2-component="Background"
  id="Background"
/>
`;

exports[`props should render Badge 1`] = `
<div
  class="wp-components-badge css-1qf2rki"
  data-g2-c16t="true"
  data-g2-component="Badge"
  id="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  />
</div>
`;

exports[`props should render Badge with css prop 1`] = `
<div
  class="wp-components-badge css-1qf2rki"
  data-g2-c16t="true"
  data-g2-component="Badge"
  id="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  />
</div>
`;

exports[`props should render Badge with css prop 2`] = `
<div
  class="wp-components-badge css-zmg8g5"
  data-g2-c16t="true"
  data-g2-component="Badge"
  id="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-qnyxla"
    data-g2-c16t="true"
    data-g2-component="Text"
  />
</div>
`;

exports[`props should render BaseButton 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button css-wout2n"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="BaseButton"
  data-icon="false"
  id="BaseButton"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render BaseButton with css prop 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button css-wout2n"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="BaseButton"
  data-icon="false"
  id="BaseButton"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render BaseButton with css prop 2`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button css-1mn2paa"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="BaseButton"
  data-icon="false"
  id="BaseButton"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render BaseField 1`] = `
<div
  class="wp-components-flex wp-components-base-field css-1rfo86y"
  data-g2-c16t="true"
  data-g2-component="BaseField"
  id="BaseField"
/>
`;

exports[`props should render BaseField with css prop 1`] = `
<div
  class="wp-components-flex wp-components-base-field css-1rfo86y"
  data-g2-c16t="true"
  data-g2-component="BaseField"
  id="BaseField"
/>
`;

exports[`props should render BaseField with css prop 2`] = `
<div
  class="wp-components-flex wp-components-base-field css-1rfoguq"
  data-g2-c16t="true"
  data-g2-component="BaseField"
  id="BaseField"
/>
`;

exports[`props should render BaseModal 1`] = `null`;

exports[`props should render Button 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  id="Button"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render Button with css prop 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  id="Button"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render Button with css prop 2`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button css-umah3l"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  id="Button"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render Card 1`] = `
<div
  class="wp-components-surface wp-components-card css-11lo8b5"
  data-g2-c16t="true"
  data-g2-component="Card"
  id="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render Card with css prop 1`] = `
<div
  class="wp-components-surface wp-components-card css-11lo8b5"
  data-g2-c16t="true"
  data-g2-component="Card"
  id="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render Card with css prop 2`] = `
<div
  class="wp-components-surface wp-components-card css-1rbt72v"
  data-g2-c16t="true"
  data-g2-component="Card"
  id="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render CardBody 1`] = `
<div
  class="wp-components-scrollable wp-components-card-body css-1un9gzz"
  data-g2-c16t="true"
  data-g2-component="CardBody"
  id="CardBody"
/>
`;

exports[`props should render CardBody with css prop 1`] = `
<div
  class="wp-components-scrollable wp-components-card-body css-1un9gzz"
  data-g2-c16t="true"
  data-g2-component="CardBody"
  id="CardBody"
/>
`;

exports[`props should render CardBody with css prop 2`] = `
<div
  class="wp-components-scrollable wp-components-card-body css-1g7czl9"
  data-g2-c16t="true"
  data-g2-component="CardBody"
  id="CardBody"
/>
`;

exports[`props should render CardFooter 1`] = `
<div
  class="wp-components-flex wp-components-card-footer css-k5kjzk"
  data-g2-c16t="true"
  data-g2-component="CardFooter"
  id="CardFooter"
/>
`;

exports[`props should render CardFooter with css prop 1`] = `
<div
  class="wp-components-flex wp-components-card-footer css-k5kjzk"
  data-g2-c16t="true"
  data-g2-component="CardFooter"
  id="CardFooter"
/>
`;

exports[`props should render CardFooter with css prop 2`] = `
<div
  class="wp-components-flex wp-components-card-footer css-vsuc5l"
  data-g2-c16t="true"
  data-g2-component="CardFooter"
  id="CardFooter"
/>
`;

exports[`props should render CardHeader 1`] = `
<div
  class="wp-components-flex wp-components-card-header css-okk3an"
  data-g2-c16t="true"
  data-g2-component="CardHeader"
  id="CardHeader"
/>
`;

exports[`props should render CardHeader with css prop 1`] = `
<div
  class="wp-components-flex wp-components-card-header css-okk3an"
  data-g2-c16t="true"
  data-g2-component="CardHeader"
  id="CardHeader"
/>
`;

exports[`props should render CardHeader with css prop 2`] = `
<div
  class="wp-components-flex wp-components-card-header css-1b0yiwm"
  data-g2-c16t="true"
  data-g2-component="CardHeader"
  id="CardHeader"
/>
`;

exports[`props should render CardInnerBody 1`] = `
<div
  class="wp-components-card-inner-body css-rlgt1m"
  data-g2-c16t="true"
  data-g2-component="CardInnerBody"
  id="CardInnerBody"
/>
`;

exports[`props should render CardInnerBody with css prop 1`] = `
<div
  class="wp-components-card-inner-body css-rlgt1m"
  data-g2-c16t="true"
  data-g2-component="CardInnerBody"
  id="CardInnerBody"
/>
`;

exports[`props should render CardInnerBody with css prop 2`] = `
<div
  class="wp-components-card-inner-body css-1d3t3w"
  data-g2-c16t="true"
  data-g2-component="CardInnerBody"
  id="CardInnerBody"
/>
`;

exports[`props should render Checkbox 1`] = `
<div
  class="css-tfu3ak"
  data-g2-component="CheckboxWrapper"
>
  <input
    aria-checked="false"
    class="wp-components-checkbox-element wp-components-checkbox css-1kgghmk"
    data-g2-c16t="true"
    data-g2-component="Checkbox"
    id="Checkbox"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    class="css-45lur0"
    data-g2-component="CheckboxIcon"
  >
    <div
      class="wp-components-icon css-1d07aa5"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render Checkbox with css prop 1`] = `
<input
  aria-checked="false"
  class="wp-components-checkbox-element wp-components-checkbox css-1kgghmk"
  data-g2-c16t="true"
  data-g2-component="Checkbox"
  id="Checkbox"
  type="checkbox"
/>
`;

exports[`props should render Checkbox with css prop 2`] = `
<input
  aria-checked="false"
  class="wp-components-checkbox-element wp-components-checkbox css-1kiuc3l"
  data-g2-c16t="true"
  data-g2-component="Checkbox"
  id="Checkbox"
  type="checkbox"
/>
`;

exports[`props should render CheckboxGroup 1`] = `null`;

exports[`props should render CloseButton 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-close-button css-b64iwo"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  id="CloseButton"
  type="button"
>
  <span
    class="wp-components-flex-item css-n2bnnp"
    data-g2-c16t="true"
    data-g2-component="ButtonIcon"
  >
    <div
      class="wp-components-icon css-1d07aa5"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render CloseButton with css prop 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-close-button css-b64iwo"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  id="CloseButton"
  type="button"
>
  <span
    class="wp-components-flex-item css-n2bnnp"
    data-g2-c16t="true"
    data-g2-component="ButtonIcon"
  >
    <div
      class="wp-components-icon css-1d07aa5"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render CloseButton with css prop 2`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-close-button css-9rm9h3"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  id="CloseButton"
  type="button"
>
  <span
    class="wp-components-flex-item css-n2bnnp"
    data-g2-c16t="true"
    data-g2-component="ButtonIcon"
  >
    <div
      class="wp-components-icon css-1d07aa5"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render ColorCircle 1`] = `
<div
  class="wp-components-color-circle css-tjqn2a"
  data-active="false"
  data-g2-c16t="true"
  data-g2-component="ColorCircle"
  id="ColorCircle"
  style="background-color: rgb(0, 0, 0);"
>
  <div
    aria-hidden="true"
    class="css-1vwzxs1"
    data-g2-component="CheckboxIcon"
  >
    <div
      class="wp-components-icon css-1n9qbco"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render ColorCircle with css prop 1`] = `
<div
  class="wp-components-color-circle css-tjqn2a"
  data-active="false"
  data-g2-c16t="true"
  data-g2-component="ColorCircle"
  id="ColorCircle"
  style="background-color: rgb(0, 0, 0);"
>
  <div
    aria-hidden="true"
    class="css-1vwzxs1"
    data-g2-component="CheckboxIcon"
  >
    <div
      class="wp-components-icon css-1n9qbco"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render ColorCircle with css prop 2`] = `
<div
  class="wp-components-color-circle css-vaahey"
  data-active="false"
  data-g2-c16t="true"
  data-g2-component="ColorCircle"
  id="ColorCircle"
  style="background-color: rgb(0, 0, 0);"
>
  <div
    aria-hidden="true"
    class="css-1vwzxs1"
    data-g2-component="CheckboxIcon"
  >
    <div
      class="wp-components-icon css-1n9qbco"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="12"
        size="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render ColorControl 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-color-control css-nhthur"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="ColorControl"
  data-icon="false"
  id="ColorControl"
  type="button"
>
  <span
    class="wp-components-flex-item css-n2bnnp"
    data-g2-c16t="true"
    data-g2-component="ButtonPrefix"
  >
    <div
      class="wp-components-color-circle css-1ec7z16"
      data-active="false"
      data-g2-c16t="true"
      data-g2-component="ColorCircle"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-hidden="true"
        class="css-1vwzxs1"
        data-g2-component="CheckboxIcon"
      >
        <div
          class="wp-components-icon css-1n9qbco"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="12"
            size="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20 6 9 17 4 12"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render ColorControl with css prop 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-color-control css-nhthur"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="ColorControl"
  data-icon="false"
  id="ColorControl"
  type="button"
>
  <span
    class="wp-components-flex-item css-n2bnnp"
    data-g2-c16t="true"
    data-g2-component="ButtonPrefix"
  >
    <div
      class="wp-components-color-circle css-1ec7z16"
      data-active="false"
      data-g2-c16t="true"
      data-g2-component="ColorCircle"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-hidden="true"
        class="css-1vwzxs1"
        data-g2-component="CheckboxIcon"
      >
        <div
          class="wp-components-icon css-1n9qbco"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="12"
            size="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20 6 9 17 4 12"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render ColorControl with css prop 2`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-color-control css-1b1axzo"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="ColorControl"
  data-icon="false"
  id="ColorControl"
  type="button"
>
  <span
    class="wp-components-flex-item css-n2bnnp"
    data-g2-c16t="true"
    data-g2-component="ButtonPrefix"
  >
    <div
      class="wp-components-color-circle css-1ec7z16"
      data-active="false"
      data-g2-c16t="true"
      data-g2-component="ColorCircle"
      style="background-color: rgb(0, 0, 0);"
    >
      <div
        aria-hidden="true"
        class="css-1vwzxs1"
        data-g2-component="CheckboxIcon"
      >
        <div
          class="wp-components-icon css-1n9qbco"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="12"
            size="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20 6 9 17 4 12"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render ComponentInspector 1`] = `
<div
  class="wp-components-component-inspector css-wwgudg"
  data-g2-c16t="true"
  data-g2-component="ComponentInspector"
  id="ComponentInspector"
/>
`;

exports[`props should render ComponentInspector with css prop 1`] = `
<div
  class="wp-components-component-inspector css-wwgudg"
  data-g2-c16t="true"
  data-g2-component="ComponentInspector"
  id="ComponentInspector"
/>
`;

exports[`props should render ComponentInspector with css prop 2`] = `
<div
  class="wp-components-component-inspector css-rpdpkm"
  data-g2-c16t="true"
  data-g2-component="ComponentInspector"
  id="ComponentInspector"
/>
`;

exports[`props should render Container 1`] = `
<div
  class="wp-components-container css-1t6va38"
  data-g2-c16t="true"
  data-g2-component="Container"
  id="Container"
/>
`;

exports[`props should render Container with css prop 1`] = `
<div
  class="wp-components-container css-1t6va38"
  data-g2-c16t="true"
  data-g2-component="Container"
  id="Container"
/>
`;

exports[`props should render Container with css prop 2`] = `
<div
  class="wp-components-container css-1ruclhp"
  data-g2-c16t="true"
  data-g2-component="Container"
  id="Container"
/>
`;

exports[`props should render ControlGroup 1`] = `
<div
  class="wp-components-flex wp-components-control-group css-kzj1sz"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
  id="ControlGroup"
/>
`;

exports[`props should render ControlGroup with css prop 1`] = `
<div
  class="wp-components-flex wp-components-control-group css-kzj1sz"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
  id="ControlGroup"
/>
`;

exports[`props should render ControlGroup with css prop 2`] = `
<div
  class="wp-components-flex wp-components-control-group css-1r3qznx"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
  id="ControlGroup"
/>
`;

exports[`props should render ControlGroupItem 1`] = `
<div
  class="wp-components-flex-item wp-components-control-group-item css-1jutz7b"
  data-g2-c16t="true"
  data-g2-component="ControlGroupItem"
  id="ControlGroupItem"
/>
`;

exports[`props should render ControlGroupItem with css prop 1`] = `
<div
  class="wp-components-flex-item wp-components-control-group-item css-1jutz7b"
  data-g2-c16t="true"
  data-g2-component="ControlGroupItem"
  id="ControlGroupItem"
/>
`;

exports[`props should render ControlGroupItem with css prop 2`] = `
<div
  class="wp-components-flex-item wp-components-control-group-item css-lcnkeg"
  data-g2-c16t="true"
  data-g2-component="ControlGroupItem"
  id="ControlGroupItem"
/>
`;

exports[`props should render ControlLabel 1`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-w5ywbe"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
  id="ControlLabel"
/>
`;

exports[`props should render ControlLabel with css prop 1`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-w5ywbe"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
  id="ControlLabel"
/>
`;

exports[`props should render ControlLabel with css prop 2`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-e5b8z8"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
  id="ControlLabel"
/>
`;

exports[`props should render Divider 1`] = `
<hr
  aria-orientation="horizontal"
  class="css-q6ydzw wp-components-divider"
  data-g2-c16t="true"
  data-g2-component="Divider"
  id="Divider"
  role="separator"
/>
`;

exports[`props should render Divider with css prop 1`] = `
<hr
  aria-orientation="horizontal"
  class="css-q6ydzw wp-components-divider"
  data-g2-c16t="true"
  data-g2-component="Divider"
  id="Divider"
  role="separator"
/>
`;

exports[`props should render Divider with css prop 2`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider css-7f46ih"
  data-g2-c16t="true"
  data-g2-component="Divider"
  id="Divider"
  role="separator"
/>
`;

exports[`props should render Dropdown 1`] = `null`;

exports[`props should render DropdownMenu 1`] = `
<div
  class="wp-components-menu wp-components-dropdown-menu css-kvsvnp"
  data-g2-c16t="true"
  data-g2-component="DropdownMenu"
  id="DropdownMenu"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render DropdownMenu with css prop 1`] = `
<div
  class="wp-components-menu wp-components-dropdown-menu css-kvsvnp"
  data-g2-c16t="true"
  data-g2-component="DropdownMenu"
  id="DropdownMenu"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render DropdownMenu with css prop 2`] = `
<div
  class="wp-components-menu wp-components-dropdown-menu css-h33em1"
  data-g2-c16t="true"
  data-g2-component="DropdownMenu"
  id="DropdownMenu"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render DropdownMenuHeader 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading wp-components-menu-header wp-components-dropdown-menu-header css-1h6b0jy"
  data-g2-c16t="true"
  data-g2-component="DropdownMenuHeader"
  id="DropdownMenuHeader"
/>
`;

exports[`props should render DropdownMenuHeader with css prop 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading wp-components-menu-header wp-components-dropdown-menu-header css-1h6b0jy"
  data-g2-c16t="true"
  data-g2-component="DropdownMenuHeader"
  id="DropdownMenuHeader"
/>
`;

exports[`props should render DropdownMenuHeader with css prop 2`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading wp-components-menu-header wp-components-dropdown-menu-header css-1pky2c6"
  data-g2-c16t="true"
  data-g2-component="DropdownMenuHeader"
  id="DropdownMenuHeader"
/>
`;

exports[`props should render DropdownMenuItem 1`] = `
<div
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-menu-item wp-components-dropdown-menu-item css-cfsf6e"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="DropdownMenuItem"
  data-icon="false"
  id="DropdownMenuItem"
  role="button"
  tabindex="0"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</div>
`;

exports[`props should render DropdownMenuItem with css prop 1`] = `
<div
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-menu-item wp-components-dropdown-menu-item css-cfsf6e"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="DropdownMenuItem"
  data-icon="false"
  id="DropdownMenuItem"
  role="button"
  tabindex="0"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</div>
`;

exports[`props should render DropdownMenuItem with css prop 2`] = `
<div
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-menu-item wp-components-dropdown-menu-item css-1ykgfb1"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="DropdownMenuItem"
  data-icon="false"
  id="DropdownMenuItem"
  role="button"
  tabindex="0"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</div>
`;

exports[`props should render DropdownTrigger 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-dropdown-trigger css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="DropdownTrigger"
  data-icon="false"
  id="DropdownTrigger"
  type="button"
>
  <span
    class="wp-components-flex-item css-1l598hg"
    data-g2-c16t="true"
    data-g2-component="ButtonCaret"
  >
    <div
      class="wp-components-icon css-1k4as4"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="16"
        size="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render DropdownTrigger with css prop 1`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-dropdown-trigger css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="DropdownTrigger"
  data-icon="false"
  id="DropdownTrigger"
  type="button"
>
  <span
    class="wp-components-flex-item css-1l598hg"
    data-g2-c16t="true"
    data-g2-component="ButtonCaret"
  >
    <div
      class="wp-components-icon css-1k4as4"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="16"
        size="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render DropdownTrigger with css prop 2`] = `
<button
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-dropdown-trigger css-umah3l"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="DropdownTrigger"
  data-icon="false"
  id="DropdownTrigger"
  type="button"
>
  <span
    class="wp-components-flex-item css-1l598hg"
    data-g2-c16t="true"
    data-g2-component="ButtonCaret"
  >
    <div
      class="wp-components-icon css-1k4as4"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        fill="none"
        height="16"
        size="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render Elevation 1`] = `
<div
  class="wp-components-elevation css-1idto82"
  data-g2-c16t="true"
  data-g2-component="Elevation"
  id="Elevation"
/>
`;

exports[`props should render Elevation with css prop 1`] = `
<div
  class="wp-components-elevation css-1idto82"
  data-g2-c16t="true"
  data-g2-component="Elevation"
  id="Elevation"
/>
`;

exports[`props should render Elevation with css prop 2`] = `
<div
  class="wp-components-elevation css-g5a6yz"
  data-g2-c16t="true"
  data-g2-component="Elevation"
  id="Elevation"
/>
`;

exports[`props should render Flex 1`] = `
<div
  class="wp-components-flex css-1syc9i3"
  data-g2-c16t="true"
  data-g2-component="Flex"
  id="Flex"
/>
`;

exports[`props should render Flex with css prop 1`] = `
<div
  class="wp-components-flex css-1syc9i3"
  data-g2-c16t="true"
  data-g2-component="Flex"
  id="Flex"
/>
`;

exports[`props should render Flex with css prop 2`] = `
<div
  class="wp-components-flex css-185g1ya"
  data-g2-c16t="true"
  data-g2-component="Flex"
  id="Flex"
/>
`;

exports[`props should render FlexBlock 1`] = `
<div
  class="wp-components-flex-item wp-components-flex-block css-zkdzda"
  data-g2-c16t="true"
  data-g2-component="FlexBlock"
  id="FlexBlock"
/>
`;

exports[`props should render FlexBlock with css prop 1`] = `
<div
  class="wp-components-flex-item wp-components-flex-block css-zkdzda"
  data-g2-c16t="true"
  data-g2-component="FlexBlock"
  id="FlexBlock"
/>
`;

exports[`props should render FlexBlock with css prop 2`] = `
<div
  class="wp-components-flex-item wp-components-flex-block css-11ua2fy"
  data-g2-c16t="true"
  data-g2-component="FlexBlock"
  id="FlexBlock"
/>
`;

exports[`props should render FlexItem 1`] = `
<div
  class="wp-components-flex-item css-19kxsx5"
  data-g2-c16t="true"
  data-g2-component="FlexItem"
  id="FlexItem"
/>
`;

exports[`props should render FlexItem with css prop 1`] = `
<div
  class="wp-components-flex-item css-19kxsx5"
  data-g2-c16t="true"
  data-g2-component="FlexItem"
  id="FlexItem"
/>
`;

exports[`props should render FlexItem with css prop 2`] = `
<div
  class="wp-components-flex-item css-1fe0c3l"
  data-g2-c16t="true"
  data-g2-component="FlexItem"
  id="FlexItem"
/>
`;

exports[`props should render FormGroup 1`] = `
<div
  class="wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
/>
`;

exports[`props should render FormGroup with css prop 1`] = `
<div
  class="wp-components-form-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
/>
`;

exports[`props should render FormGroup with css prop 2`] = `
<div
  class="wp-components-form-group css-rnwhtm"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
/>
`;

exports[`props should render Grid 1`] = `
<div
  class="wp-components-grid css-pegie0"
  data-g2-c16t="true"
  data-g2-component="Grid"
  id="Grid"
/>
`;

exports[`props should render Grid with css prop 1`] = `
<div
  class="wp-components-grid css-pegie0"
  data-g2-c16t="true"
  data-g2-component="Grid"
  id="Grid"
/>
`;

exports[`props should render Grid with css prop 2`] = `
<div
  class="wp-components-grid css-3dwd9k"
  data-g2-c16t="true"
  data-g2-component="Grid"
  id="Grid"
/>
`;

exports[`props should render HStack 1`] = `
<div
  class="wp-components-flex wp-components-h-stack css-1jiui0z"
  data-g2-c16t="true"
  data-g2-component="HStack"
  id="HStack"
/>
`;

exports[`props should render HStack with css prop 1`] = `
<div
  class="wp-components-flex wp-components-h-stack css-1jiui0z"
  data-g2-c16t="true"
  data-g2-component="HStack"
  id="HStack"
/>
`;

exports[`props should render HStack with css prop 2`] = `
<div
  class="wp-components-flex wp-components-h-stack css-1tmq11j"
  data-g2-c16t="true"
  data-g2-component="HStack"
  id="HStack"
/>
`;

exports[`props should render Heading 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading css-ohvggs"
  data-g2-c16t="true"
  data-g2-component="Heading"
  id="Heading"
/>
`;

exports[`props should render Heading with css prop 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading css-ohvggs"
  data-g2-c16t="true"
  data-g2-component="Heading"
  id="Heading"
/>
`;

exports[`props should render Heading with css prop 2`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading css-19phb5y"
  data-g2-c16t="true"
  data-g2-component="Heading"
  id="Heading"
/>
`;

exports[`props should render HelpTip 1`] = `
<span
  aria-describedby="HelpTip"
  class="css-157zw4n"
  tabindex="0"
>
  <div
    class="wp-components-icon css-1afesb"
    data-g2-c16t="true"
    data-g2-component="Icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="17"
      />
    </svg>
  </div>
</span>
`;

exports[`props should render Icon 1`] = `null`;

exports[`props should render Image 1`] = `
<img
  class="wp-components-image css-1obj85a"
  data-g2-c16t="true"
  data-g2-component="Image"
  id="Image"
/>
`;

exports[`props should render Image with css prop 1`] = `
<img
  class="wp-components-image css-1obj85a"
  data-g2-c16t="true"
  data-g2-component="Image"
  id="Image"
/>
`;

exports[`props should render Image with css prop 2`] = `
<img
  class="wp-components-image css-191l29s"
  data-g2-c16t="true"
  data-g2-component="Image"
  id="Image"
/>
`;

exports[`props should render Initials 1`] = `
<span
  class="wp-components-truncate wp-components-text wp-components-initials css-1xgp14x"
  data-g2-c16t="true"
  data-g2-component="Initials"
  id="Initials"
/>
`;

exports[`props should render Initials with css prop 1`] = `
<span
  class="wp-components-truncate wp-components-text wp-components-initials css-1xgp14x"
  data-g2-c16t="true"
  data-g2-component="Initials"
  id="Initials"
/>
`;

exports[`props should render Initials with css prop 2`] = `
<span
  class="wp-components-truncate wp-components-text wp-components-initials css-19jm77f"
  data-g2-c16t="true"
  data-g2-component="Initials"
  id="Initials"
/>
`;

exports[`props should render Link 1`] = `
<a
  class="wp-components-truncate wp-components-text wp-components-link css-zvxhcg"
  data-g2-c16t="true"
  data-g2-component="Link"
  id="Link"
/>
`;

exports[`props should render Link with css prop 1`] = `
<a
  class="wp-components-truncate wp-components-text wp-components-link css-zvxhcg"
  data-g2-c16t="true"
  data-g2-component="Link"
  id="Link"
/>
`;

exports[`props should render Link with css prop 2`] = `
<a
  class="wp-components-truncate wp-components-text wp-components-link css-p7blea"
  data-g2-c16t="true"
  data-g2-component="Link"
  id="Link"
/>
`;

exports[`props should render List 1`] = `
<ul
  class="wp-components-list css-e8bwzb"
  data-g2-c16t="true"
  data-g2-component="List"
  id="List"
/>
`;

exports[`props should render List with css prop 1`] = `
<ul
  class="wp-components-list css-e8bwzb"
  data-g2-c16t="true"
  data-g2-component="List"
  id="List"
/>
`;

exports[`props should render List with css prop 2`] = `
<ul
  class="wp-components-list css-s774in"
  data-g2-c16t="true"
  data-g2-component="List"
  id="List"
/>
`;

exports[`props should render ListGroup 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack wp-components-list-group css-111mesx"
  data-g2-c16t="true"
  data-g2-component="ListGroup"
  id="ListGroup"
/>
`;

exports[`props should render ListGroup with css prop 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack wp-components-list-group css-111mesx"
  data-g2-c16t="true"
  data-g2-component="ListGroup"
  id="ListGroup"
/>
`;

exports[`props should render ListGroup with css prop 2`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack wp-components-list-group css-1nijv0t"
  data-g2-c16t="true"
  data-g2-component="ListGroup"
  id="ListGroup"
/>
`;

exports[`props should render ListGroupFooter 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-list-group-footer css-1jiui0z"
  data-g2-c16t="true"
  data-g2-component="ListGroupFooter"
  id="ListGroupFooter"
/>
`;

exports[`props should render ListGroupFooter with css prop 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-list-group-footer css-1jiui0z"
  data-g2-c16t="true"
  data-g2-component="ListGroupFooter"
  id="ListGroupFooter"
/>
`;

exports[`props should render ListGroupFooter with css prop 2`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-list-group-footer css-1tmq11j"
  data-g2-c16t="true"
  data-g2-component="ListGroupFooter"
  id="ListGroupFooter"
/>
`;

exports[`props should render ListGroupHeader 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-list-group-header css-1jiui0z"
  data-g2-c16t="true"
  data-g2-component="ListGroupHeader"
  id="ListGroupHeader"
/>
`;

exports[`props should render ListGroupHeader with css prop 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-list-group-header css-1jiui0z"
  data-g2-c16t="true"
  data-g2-component="ListGroupHeader"
  id="ListGroupHeader"
/>
`;

exports[`props should render ListGroupHeader with css prop 2`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-list-group-header css-1tmq11j"
  data-g2-c16t="true"
  data-g2-component="ListGroupHeader"
  id="ListGroupHeader"
/>
`;

exports[`props should render ListGroups 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack wp-components-list-groups css-qkmwvu"
  data-g2-c16t="true"
  data-g2-component="ListGroups"
  id="ListGroups"
/>
`;

exports[`props should render ListGroups with css prop 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack wp-components-list-groups css-qkmwvu"
  data-g2-c16t="true"
  data-g2-component="ListGroups"
  id="ListGroups"
/>
`;

exports[`props should render ListGroups with css prop 2`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack wp-components-list-groups css-1rcikdt"
  data-g2-c16t="true"
  data-g2-component="ListGroups"
  id="ListGroups"
/>
`;

exports[`props should render ListItem 1`] = `
<li
  class="wp-components-list-item css-pqhj3g"
  data-g2-c16t="true"
  data-g2-component="ListItem"
  id="ListItem"
/>
`;

exports[`props should render ListItem with css prop 1`] = `
<li
  class="wp-components-list-item css-pqhj3g"
  data-g2-c16t="true"
  data-g2-component="ListItem"
  id="ListItem"
/>
`;

exports[`props should render ListItem with css prop 2`] = `
<li
  class="wp-components-list-item css-zt2gwy"
  data-g2-c16t="true"
  data-g2-component="ListItem"
  id="ListItem"
/>
`;

exports[`props should render Menu 1`] = `
<div
  class="wp-components-menu css-l1xzm4"
  data-g2-c16t="true"
  data-g2-component="Menu"
  id="Menu"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render Menu with css prop 1`] = `
<div
  class="wp-components-menu css-l1xzm4"
  data-g2-c16t="true"
  data-g2-component="Menu"
  id="Menu"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render Menu with css prop 2`] = `
<div
  class="wp-components-menu css-1rk128y"
  data-g2-c16t="true"
  data-g2-component="Menu"
  id="Menu"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</div>
`;

exports[`props should render MenuHeader 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading wp-components-menu-header css-1h6b0jy"
  data-g2-c16t="true"
  data-g2-component="MenuHeader"
  id="MenuHeader"
/>
`;

exports[`props should render MenuHeader with css prop 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading wp-components-menu-header css-1h6b0jy"
  data-g2-c16t="true"
  data-g2-component="MenuHeader"
  id="MenuHeader"
/>
`;

exports[`props should render MenuHeader with css prop 2`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-heading wp-components-menu-header css-1pky2c6"
  data-g2-c16t="true"
  data-g2-component="MenuHeader"
  id="MenuHeader"
/>
`;

exports[`props should render MenuItem 1`] = `
<div
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-menu-item css-cfsf6e"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="MenuItem"
  data-icon="false"
  id="MenuItem"
  role="button"
  tabindex="0"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</div>
`;

exports[`props should render MenuItem with css prop 1`] = `
<div
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-menu-item css-cfsf6e"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="MenuItem"
  data-icon="false"
  id="MenuItem"
  role="button"
  tabindex="0"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</div>
`;

exports[`props should render MenuItem with css prop 2`] = `
<div
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-menu-item css-1ykgfb1"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="MenuItem"
  data-icon="false"
  id="MenuItem"
  role="button"
  tabindex="0"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</div>
`;

exports[`props should render Modal 1`] = `null`;

exports[`props should render ModalBody 1`] = `
<div
  class="wp-components-scrollable wp-components-card-body wp-components-modal-body css-1un9gzz"
  data-g2-c16t="true"
  data-g2-component="ModalBody"
  id="ModalBody"
/>
`;

exports[`props should render ModalBody with css prop 1`] = `
<div
  class="wp-components-scrollable wp-components-card-body wp-components-modal-body css-1un9gzz"
  data-g2-c16t="true"
  data-g2-component="ModalBody"
  id="ModalBody"
/>
`;

exports[`props should render ModalBody with css prop 2`] = `
<div
  class="wp-components-scrollable wp-components-card-body wp-components-modal-body css-1g7czl9"
  data-g2-c16t="true"
  data-g2-component="ModalBody"
  id="ModalBody"
/>
`;

exports[`props should render ModalFooter 1`] = `
<div
  class="wp-components-flex wp-components-card-footer wp-components-modal-footer css-50s30q"
  data-g2-c16t="true"
  data-g2-component="ModalFooter"
  id="ModalFooter"
/>
`;

exports[`props should render ModalFooter with css prop 1`] = `
<div
  class="wp-components-flex wp-components-card-footer wp-components-modal-footer css-50s30q"
  data-g2-c16t="true"
  data-g2-component="ModalFooter"
  id="ModalFooter"
/>
`;

exports[`props should render ModalFooter with css prop 2`] = `
<div
  class="wp-components-flex wp-components-card-footer wp-components-modal-footer css-1g7gtdy"
  data-g2-c16t="true"
  data-g2-component="ModalFooter"
  id="ModalFooter"
/>
`;

exports[`props should render ModalHeader 1`] = `
<div
  class="wp-components-flex wp-components-card-header wp-components-modal-header css-eh2scv"
  data-g2-c16t="true"
  data-g2-component="ModalHeader"
  id="ModalHeader"
>
  <div
    class="wp-components-modal-close-button css-7iavjl"
    data-g2-c16t="true"
    data-g2-component="ModalCloseButton"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-eiso1m"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-flex-item css-19mrak6"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Close
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render ModalHeader with css prop 1`] = `
<div
  class="wp-components-flex wp-components-card-header wp-components-modal-header css-eh2scv"
  data-g2-c16t="true"
  data-g2-component="ModalHeader"
  id="ModalHeader"
>
  <div
    class="wp-components-modal-close-button css-7iavjl"
    data-g2-c16t="true"
    data-g2-component="ModalCloseButton"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-eiso1m"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-flex-item css-19mrak6"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Close
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render ModalHeader with css prop 2`] = `
<div
  class="wp-components-flex wp-components-card-header wp-components-modal-header css-1xy2u5z"
  data-g2-c16t="true"
  data-g2-component="ModalHeader"
  id="ModalHeader"
>
  <div
    class="wp-components-modal-close-button css-7iavjl"
    data-g2-c16t="true"
    data-g2-component="ModalCloseButton"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-eiso1m"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-flex-item css-19mrak6"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Close
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render ModalTitle 1`] = `null`;

exports[`props should render ModalTrigger 1`] = `
<button
  aria-busy="false"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="wp-components-flex wp-components-base-button wp-components-button css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="Button"
  data-icon="false"
  id="ModalTrigger"
  type="button"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render NavigatorButton 1`] = `
<a
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-navigator-button css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="NavigatorButton"
  data-icon="false"
  href="#"
  id="NavigatorButton"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</a>
`;

exports[`props should render NavigatorButton with css prop 1`] = `
<a
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-navigator-button css-wnd5p"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="NavigatorButton"
  data-icon="false"
  href="#"
  id="NavigatorButton"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</a>
`;

exports[`props should render NavigatorButton with css prop 2`] = `
<a
  aria-busy="false"
  class="wp-components-flex wp-components-base-button wp-components-button wp-components-navigator-button css-umah3l"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="NavigatorButton"
  data-icon="false"
  href="#"
  id="NavigatorButton"
>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</a>
`;

exports[`props should render Placeholder 1`] = `
<div
  class="wp-components-placeholder css-178r7q7"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
  id="Placeholder"
/>
`;

exports[`props should render Placeholder with css prop 1`] = `
<div
  class="wp-components-placeholder css-178r7q7"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
  id="Placeholder"
/>
`;

exports[`props should render Placeholder with css prop 2`] = `
<div
  class="wp-components-placeholder css-34792u"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
  id="Placeholder"
/>
`;

exports[`props should render Popover 1`] = `null`;

exports[`props should render Radio 1`] = `
<div
  class="css-tfu3ak"
  data-g2-component="RadioWrapper"
>
  <input
    aria-checked="false"
    class="wp-components-radio-element wp-components-radio css-ozhu2l"
    data-g2-c16t="true"
    data-g2-component="Radio"
    id="Radio"
    tabindex="0"
    type="radio"
  />
  <div
    aria-hidden="true"
    class="css-x9ipsg"
    data-g2-component="RadioIcon"
  >
    <div
      class="css-16octit"
    />
  </div>
</div>
`;

exports[`props should render Radio with css prop 1`] = `
<input
  aria-checked="false"
  class="wp-components-radio-element wp-components-radio css-ozhu2l"
  data-g2-c16t="true"
  data-g2-component="Radio"
  id="Radio"
  tabindex="0"
  type="radio"
/>
`;

exports[`props should render Radio with css prop 2`] = `
<input
  aria-checked="false"
  class="wp-components-radio-element wp-components-radio css-zi6b7g"
  data-g2-c16t="true"
  data-g2-component="Radio"
  id="Radio"
  tabindex="0"
  type="radio"
/>
`;

exports[`props should render RadioGroup 1`] = `
<div
  aria-label="RadioGroup"
  class="wp-components-radio-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="RadioGroup"
  role="radiogroup"
/>
`;

exports[`props should render RadioGroup with css prop 1`] = `
<div
  aria-label="RadioGroup"
  class="wp-components-radio-group css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="RadioGroup"
  role="radiogroup"
/>
`;

exports[`props should render RadioGroup with css prop 2`] = `
<div
  aria-label="RadioGroup"
  class="wp-components-radio-group css-rnwhtm"
  data-g2-c16t="true"
  data-g2-component="RadioGroup"
  role="radiogroup"
/>
`;

exports[`props should render Scrollable 1`] = `
<div
  class="wp-components-scrollable css-1fusbgi"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
  id="Scrollable"
/>
`;

exports[`props should render Scrollable with css prop 1`] = `
<div
  class="wp-components-scrollable css-1fusbgi"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
  id="Scrollable"
/>
`;

exports[`props should render Scrollable with css prop 2`] = `
<div
  class="wp-components-scrollable css-1p805by"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
  id="Scrollable"
/>
`;

exports[`props should render SearchInput 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input wp-components-search-input css-1em45yz"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="css-tn92r9"
  >
    <span
      class="wp-components-truncate wp-components-text css-1j5v64k"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-icon css-1d07aa5"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="12"
          size="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <line
            x1="21"
            x2="16.65"
            y1="21"
            y2="16.65"
          />
        </svg>
      </div>
    </span>
  </div>
  <input
    autocomplete="off"
    class="css-zn43e4"
    data-g2-c16t="true"
    data-g2-component="SearchInput"
    id="SearchInput"
    placeholder="Search..."
    spellcheck="false"
    type="search"
    value=""
  />
  <div
    class="css-ie9y1c"
  >
    <button
      aria-busy="false"
      aria-label="Clear"
      class="wp-components-flex wp-components-base-button wp-components-button css-y269qn"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="true"
      tabindex="-1"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-2zqc15"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="10"
            size="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render SegmentedControl 1`] = `
<div
  aria-label="SegmentControl"
  class="wp-components-segmented-control css-k53so3"
  data-g2-c16t="true"
  data-g2-component="SegmentedControl"
  id="SegmentedControl"
  role="radiogroup"
  tabindex="0"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
  <div
    class="css-80hbch"
    data-g2-component="SegmentedControlBackdrop"
    role="presentation"
    style="transform: translateX(0px); transition: none; width: 0px;"
  />
</div>
`;

exports[`props should render SegmentedControl with css prop 1`] = `
<div
  aria-label="SegmentControl"
  class="wp-components-segmented-control css-k53so3"
  data-g2-c16t="true"
  data-g2-component="SegmentedControl"
  id="SegmentedControl"
  role="radiogroup"
  tabindex="0"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
  <div
    class="css-80hbch"
    data-g2-component="SegmentedControlBackdrop"
    role="presentation"
    style="transform: translateX(0px); transition: none; width: 0px;"
  />
</div>
`;

exports[`props should render SegmentedControl with css prop 2`] = `
<div
  aria-label="SegmentControl"
  class="wp-components-segmented-control css-g4573t"
  data-g2-c16t="true"
  data-g2-component="SegmentedControl"
  id="SegmentedControl"
  role="radiogroup"
  tabindex="0"
>
  <iframe
    aria-hidden="true"
    frameborder="0"
    src="about:blank"
    style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
  <div
    class="css-80hbch"
    data-g2-component="SegmentedControlBackdrop"
    role="presentation"
    style="transform: translateX(0px); transition: none; width: 0px;"
  />
</div>
`;

exports[`props should render Select 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-select css-1nl6bkg"
  data-g2-c16t="true"
  data-g2-component="SelectWrapper"
>
  <select
    class="css-pjq1vj"
    data-g2-c16t="true"
    data-g2-component="Select"
    id="Select"
  />
  <div
    class="wp-components-flex-item css-5yrsrk"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <span
      class="wp-components-truncate wp-components-text css-12kpubv"
      data-g2-c16t="true"
      data-g2-component="Text"
    >
      <div
        class="wp-components-icon css-1tw4gp0"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="14"
          size="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </div>
    </span>
  </div>
</div>
`;

exports[`props should render Separator 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-15oxbod"
  data-g2-c16t="true"
  data-g2-component="Separator"
  id="Separator"
  role="separator"
/>
`;

exports[`props should render Separator with css prop 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-15oxbod"
  data-g2-c16t="true"
  data-g2-component="Separator"
  id="Separator"
  role="separator"
/>
`;

exports[`props should render Separator with css prop 2`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-g79qe"
  data-g2-c16t="true"
  data-g2-component="Separator"
  id="Separator"
  role="separator"
/>
`;

exports[`props should render Slider 1`] = `
<input
  class="wp-components-slider css-au1bgs"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="Slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render Slider with css prop 1`] = `
<input
  class="wp-components-slider css-au1bgs"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="Slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render Slider with css prop 2`] = `
<input
  class="wp-components-slider css-kuxg2m"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="Slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-spacer css-1jtn9d9"
  data-g2-c16t="true"
  data-g2-component="Spacer"
  id="Spacer"
/>
`;

exports[`props should render Spacer with css prop 1`] = `
<div
  class="wp-components-spacer css-1jtn9d9"
  data-g2-c16t="true"
  data-g2-component="Spacer"
  id="Spacer"
/>
`;

exports[`props should render Spacer with css prop 2`] = `
<div
  class="wp-components-spacer css-1baslc2"
  data-g2-c16t="true"
  data-g2-component="Spacer"
  id="Spacer"
/>
`;

exports[`props should render Spinner 1`] = `
<div
  aria-busy="true"
  class="wp-components-spinner css-ee8emf"
  data-g2-c16t="true"
  data-g2-component="Spinner"
  id="Spinner"
  style="height: 16px; width: 16px;"
>
  <div
    aria-hidden="true"
    class="css-pq0fgq"
    style="transform: scale(0.4444444444444444);"
  >
    <div
      class="css-1rq9pxc"
    >
      <div
        class="InnerBar1"
      />
      <div
        class="InnerBar2"
      />
      <div
        class="InnerBar3"
      />
      <div
        class="InnerBar4"
      />
      <div
        class="InnerBar5"
      />
      <div
        class="InnerBar6"
      />
      <div
        class="InnerBar7"
      />
      <div
        class="InnerBar8"
      />
      <div
        class="InnerBar9"
      />
      <div
        class="InnerBar10"
      />
      <div
        class="InnerBar11"
      />
      <div
        class="InnerBar12"
      />
    </div>
  </div>
</div>
`;

exports[`props should render Spinner with css prop 1`] = `
<div
  aria-busy="true"
  class="wp-components-spinner css-ee8emf"
  data-g2-c16t="true"
  data-g2-component="Spinner"
  id="Spinner"
  style="height: 16px; width: 16px;"
>
  <div
    aria-hidden="true"
    class="css-pq0fgq"
    style="transform: scale(0.4444444444444444);"
  >
    <div
      class="css-1rq9pxc"
    >
      <div
        class="InnerBar1"
      />
      <div
        class="InnerBar2"
      />
      <div
        class="InnerBar3"
      />
      <div
        class="InnerBar4"
      />
      <div
        class="InnerBar5"
      />
      <div
        class="InnerBar6"
      />
      <div
        class="InnerBar7"
      />
      <div
        class="InnerBar8"
      />
      <div
        class="InnerBar9"
      />
      <div
        class="InnerBar10"
      />
      <div
        class="InnerBar11"
      />
      <div
        class="InnerBar12"
      />
    </div>
  </div>
</div>
`;

exports[`props should render Spinner with css prop 2`] = `
<div
  aria-busy="true"
  class="wp-components-spinner css-lk5x3y"
  data-g2-c16t="true"
  data-g2-component="Spinner"
  id="Spinner"
  style="height: 16px; width: 16px;"
>
  <div
    aria-hidden="true"
    class="css-pq0fgq"
    style="transform: scale(0.4444444444444444);"
  >
    <div
      class="css-1rq9pxc"
    >
      <div
        class="InnerBar1"
      />
      <div
        class="InnerBar2"
      />
      <div
        class="InnerBar3"
      />
      <div
        class="InnerBar4"
      />
      <div
        class="InnerBar5"
      />
      <div
        class="InnerBar6"
      />
      <div
        class="InnerBar7"
      />
      <div
        class="InnerBar8"
      />
      <div
        class="InnerBar9"
      />
      <div
        class="InnerBar10"
      />
      <div
        class="InnerBar11"
      />
      <div
        class="InnerBar12"
      />
    </div>
  </div>
</div>
`;

exports[`props should render Stepper 1`] = `
<div
  class="wp-components-flex wp-components-control-group wp-components-stepper css-o8ji27"
  data-g2-c16t="true"
  data-g2-component="Stepper"
  id="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-11geyni"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-duc0b9"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1mce53w"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-eidvad"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render Stepper with css prop 1`] = `
<div
  class="wp-components-flex wp-components-control-group wp-components-stepper css-o8ji27"
  data-g2-c16t="true"
  data-g2-component="Stepper"
  id="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-11geyni"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-duc0b9"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1mce53w"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-eidvad"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render Stepper with css prop 2`] = `
<div
  class="wp-components-flex wp-components-control-group wp-components-stepper css-bnld5n"
  data-g2-c16t="true"
  data-g2-component="Stepper"
  id="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-11geyni"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-duc0b9"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1mce53w"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-flex wp-components-base-button wp-components-button css-eidvad"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex-item css-n2bnnp"
        data-g2-c16t="true"
        data-g2-component="ButtonIcon"
      >
        <div
          class="wp-components-icon css-1tw4gp0"
          data-g2-c16t="true"
          data-g2-component="Icon"
        >
          <svg
            fill="none"
            height="14"
            size="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="5"
              y2="19"
            />
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
          </svg>
        </div>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render Subheading 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-subheading css-4qaynu"
  data-g2-c16t="true"
  data-g2-component="Subheading"
  id="Subheading"
/>
`;

exports[`props should render Subheading with css prop 1`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-subheading css-4qaynu"
  data-g2-c16t="true"
  data-g2-component="Subheading"
  id="Subheading"
/>
`;

exports[`props should render Subheading with css prop 2`] = `
<div
  class="wp-components-truncate wp-components-text wp-components-subheading css-127fkzr"
  data-g2-c16t="true"
  data-g2-component="Subheading"
  id="Subheading"
/>
`;

exports[`props should render Surface 1`] = `
<div
  class="wp-components-surface css-9yqr3x"
  data-g2-c16t="true"
  data-g2-component="Surface"
  id="Surface"
/>
`;

exports[`props should render Surface with css prop 1`] = `
<div
  class="wp-components-surface css-9yqr3x"
  data-g2-c16t="true"
  data-g2-component="Surface"
  id="Surface"
/>
`;

exports[`props should render Surface with css prop 2`] = `
<div
  class="wp-components-surface css-1m8gedj"
  data-g2-c16t="true"
  data-g2-component="Surface"
  id="Surface"
/>
`;

exports[`props should render Switch 1`] = `
<label
  class="wp-components-switch css-80543k"
  data-g2-c16t="true"
  data-g2-component="Switch"
  for="Switch"
>
  <input
    aria-checked="false"
    class="css-175q9tm"
    data-g2-c16t="true"
    data-g2-component="SwitchInput"
    id="Switch"
    type="checkbox"
  />
  <div
    aria-hidden="true"
    class="css-26esqa"
    data-g2-component="SwitchBackdrop"
  />
  <div
    aria-hidden="true"
    class="css-nowzpc"
    data-g2-component="SwitchToggle"
  />
  <span
    data-g2-component="SwitchLabel"
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
  />
</label>
`;

exports[`props should render Tab 1`] = `
<button
  aria-selected="false"
  class="wp-components-tab css-1kygex4"
  data-g2-c16t="true"
  data-g2-component="Tab"
  id="Tab"
  role="tab"
  tabindex="0"
/>
`;

exports[`props should render Tab with css prop 1`] = `
<button
  aria-selected="false"
  class="wp-components-tab css-1kygex4"
  data-g2-c16t="true"
  data-g2-component="Tab"
  id="Tab"
  role="tab"
  tabindex="0"
/>
`;

exports[`props should render Tab with css prop 2`] = `
<button
  aria-selected="false"
  class="wp-components-tab css-zsfdc8"
  data-g2-c16t="true"
  data-g2-component="Tab"
  id="Tab"
  role="tab"
  tabindex="0"
/>
`;

exports[`props should render TabList 1`] = `
<div
  aria-label="Tabs"
  class="wp-components-tab-list css-1jd2elf"
  data-g2-c16t="true"
  data-g2-component="TabList"
  id="TabList"
  role="tablist"
>
  <div
    class="css-1siwnxt"
    role="presentation"
    style="transform: translateX(0px); transition: none; width: 0px;"
  />
</div>
`;

exports[`props should render TabList with css prop 1`] = `
<div
  aria-label="Tabs"
  class="wp-components-tab-list css-1jd2elf"
  data-g2-c16t="true"
  data-g2-component="TabList"
  id="TabList"
  role="tablist"
>
  <div
    class="css-1siwnxt"
    role="presentation"
    style="transform: translateX(0px); transition: none; width: 0px;"
  />
</div>
`;

exports[`props should render TabList with css prop 2`] = `
<div
  aria-label="Tabs"
  class="wp-components-tab-list css-1yscbxo"
  data-g2-c16t="true"
  data-g2-component="TabList"
  id="TabList"
  role="tablist"
>
  <div
    class="css-1siwnxt"
    role="presentation"
    style="transform: translateX(0px); transition: none; width: 0px;"
  />
</div>
`;

exports[`props should render TabPanel 1`] = `
<div
  class="wp-components-tab-panel css-1lnowwh"
  data-g2-c16t="true"
  data-g2-component="TabPanel"
  hidden=""
  id="TabPanel"
  role="tabpanel"
  style="display: none;"
  tabindex="0"
/>
`;

exports[`props should render TabPanel with css prop 1`] = `
<div
  class="wp-components-tab-panel css-1lnowwh"
  data-g2-c16t="true"
  data-g2-component="TabPanel"
  hidden=""
  id="TabPanel"
  role="tabpanel"
  style="display: none;"
  tabindex="0"
/>
`;

exports[`props should render TabPanel with css prop 2`] = `
<div
  class="wp-components-tab-panel css-1pvtmi5"
  data-g2-c16t="true"
  data-g2-component="TabPanel"
  hidden=""
  id="TabPanel"
  role="tabpanel"
  style="display: none;"
  tabindex="0"
/>
`;

exports[`props should render Tag 1`] = `
<span
  class="wp-components-tag css-16ertor"
  data-g2-c16t="true"
  data-g2-component="Tag"
  id="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1ejcfnr"
    data-g2-c16t="true"
    data-g2-component="Text"
  />
</span>
`;

exports[`props should render Tag with css prop 1`] = `
<span
  class="wp-components-tag css-16ertor"
  data-g2-c16t="true"
  data-g2-component="Tag"
  id="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1ejcfnr"
    data-g2-c16t="true"
    data-g2-component="Text"
  />
</span>
`;

exports[`props should render Tag with css prop 2`] = `
<span
  class="wp-components-tag css-1q06luk"
  data-g2-c16t="true"
  data-g2-component="Tag"
  id="Tag"
>
  <span
    class="wp-components-truncate wp-components-text css-1ejcfnr"
    data-g2-c16t="true"
    data-g2-component="Text"
  />
</span>
`;

exports[`props should render Text 1`] = `
<span
  class="wp-components-truncate wp-components-text css-1j5v64k"
  data-g2-c16t="true"
  data-g2-component="Text"
  id="Text"
/>
`;

exports[`props should render Text with css prop 1`] = `
<span
  class="wp-components-truncate wp-components-text css-1j5v64k"
  data-g2-c16t="true"
  data-g2-component="Text"
  id="Text"
/>
`;

exports[`props should render Text with css prop 2`] = `
<span
  class="wp-components-truncate wp-components-text css-1ihycc6"
  data-g2-c16t="true"
  data-g2-component="Text"
  id="Text"
/>
`;

exports[`props should render TextField 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-16rwfbj"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-zn43e4"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="TextField"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render TextInput 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-16rwfbj"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-zn43e4"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="TextInput"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render Tooltip 1`] = `null`;

exports[`props should render Truncate 1`] = `
<span
  class="wp-components-truncate css-opvjha"
  data-g2-c16t="true"
  data-g2-component="Truncate"
  id="Truncate"
/>
`;

exports[`props should render Truncate with css prop 1`] = `
<span
  class="wp-components-truncate css-opvjha"
  data-g2-c16t="true"
  data-g2-component="Truncate"
  id="Truncate"
/>
`;

exports[`props should render Truncate with css prop 2`] = `
<span
  class="wp-components-truncate css-5jbwm1"
  data-g2-c16t="true"
  data-g2-component="Truncate"
  id="Truncate"
/>
`;

exports[`props should render VStack 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-111mesx"
  data-g2-c16t="true"
  data-g2-component="VStack"
  id="VStack"
/>
`;

exports[`props should render VStack with css prop 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-111mesx"
  data-g2-c16t="true"
  data-g2-component="VStack"
  id="VStack"
/>
`;

exports[`props should render VStack with css prop 2`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-1nijv0t"
  data-g2-c16t="true"
  data-g2-component="VStack"
  id="VStack"
/>
`;

exports[`props should render ZStack 1`] = `
<div
  class="wp-components-z-stack css-21shsf"
  data-g2-c16t="true"
  data-g2-component="ZStack"
  id="ZStack"
/>
`;

exports[`props should render ZStack with css prop 1`] = `
<div
  class="wp-components-z-stack css-21shsf"
  data-g2-c16t="true"
  data-g2-component="ZStack"
  id="ZStack"
/>
`;

exports[`props should render ZStack with css prop 2`] = `
<div
  class="wp-components-z-stack css-10w74if"
  data-g2-c16t="true"
  data-g2-component="ZStack"
  id="ZStack"
/>
`;
